--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Il Mio Viaggio A Londra</title>
+    <title>Il mio Viaggio a Londra</title>
 </head>
 <body>
+    <!-- Prima parte -->
     <header>
+
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="prima immagine Londra">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="seconda immagine Londra">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="terza immagine Londra">
+        <hr/>
 
     </header>
 
@@ -20,8 +27,8 @@
 
 
     <footer>
-        https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg
-        https://www.studytoursinternational.com/images/cdl/schools/new/1483505065.jpg
+        <!-- https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg
+        https://www.studytoursinternational.com/images/cdl/schools/new/1483505065.jpg -->
     </footer>
 </body>
 </html>
