--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
             <hr/>
         </section>
         <!-- fine prima sezione main -->
-        
+        <!-- inizio seconda sezione -->
+        <section>
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &#10007</li>
+                <li>Visitare greenwich &#10004</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10004</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#10007</li>
+            </ul>
+            <hr/>
+        </section>
+        <!-- fine seconda sezione -->
 
 
 
