--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <title>Il mio Viaggio a Londra</title>
 </head>
 <body>
-    <!-- Prima parte -->
+    <!-- inizio intestazione -->
     <header>
 
         <h1>Il mio Viaggio a Londra</h1>
-        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="prima immagine Londra">
-        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="seconda immagine Londra">
-        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="terza immagine Londra">
+        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="prima parte sky line Londra">
+        <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="seconda parte sky line Londra">
+        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="terza parte sky line Londra">
         <hr/>
 
     </header>
+    <!-- fine intestazione -->
 
     <main>
 
@@ -95,17 +96,21 @@
                     </ul>
                 </li>
             </ol>
-            <br/>
+            <hr/>
         </section>
         <!-- fine terza sezione -->
 
     </main>
 
 
-
+    <!-- inizio ultima parte -->
     <footer>
-        <!-- https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg
-        https://www.studytoursinternational.com/images/cdl/schools/new/1483505065.jpg -->
+        <h3>Le foto</h3>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Immagine Tamigi">
+        <img src="https://www.studytoursinternational.com/images/cdl/schools/new/1483505065.jpg" alt="Immagine Big Ben">
+         <p>Made with &#128151 by Andrea</p>
     </footer>
+    <!-- fine ultima parte -->
+
 </body>
 </html>
