--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
 
         <h1>Il mio Viaggio a Londra</h1>
-        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="prima parte sky line Londra">
+        <a href="https://en.wikipedia.org/wiki/London_Eye"><img src="./img/pexels-bill-emrich-230794-0.jpg" alt="prima parte sky line Londra"></a>
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="seconda parte sky line Londra">
-        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="terza parte sky line Londra">
+        <a href="https://en.wikipedia.org/wiki/Palace_of_Westminster"><img src="./img/pexels-bill-emrich-230794-2.jpg" alt="terza parte sky line Londra"></a>
         <hr/>
 
     </header>
@@ -64,10 +64,10 @@
         <section>
             <h3>Cose da fare</h3>
             <ul>
-                <li>Visitare la Tower of London &#10007</li>
-                <li>Visitare greenwich &#10004</li>
-                <li>Ascoltare un artista di strada a Covent Garden &#10004</li>
-                <li>Mangiare il tipico Fish and Chips inglese &#10007</li>
+                <li>Visitare la <a href="https://en.wikipedia.org/wiki/Tower_of_London">Tower of London</a> &#10007</li>
+                <li>Visitare <a href="https://en.wikipedia.org/wiki/Greenwich">Greenwich</a> &#10004</li>
+                <li>Ascoltare un artista di strada a <a href="https://en.wikipedia.org/wiki/Covent_Garden"> Covent Garden </a> &#10004</li>
+                <li>Mangiare il tipico <a href="https://en.wikipedia.org/wiki/Fish_and_chips">Fish and Chips</a> inglese &#10007</li>
             </ul>
             <hr/>
         </section>
@@ -85,8 +85,8 @@
                 </li>
                 <li>Hotel
                     <ul>
-                        <li><strong>Nome hotel:</strong> Buckingham Palace</li>
-                        <li><strong>Indirizzo hotel</strong> Westminster, London SW1A 1AA, Regno Unito</li>
+                        <li><strong>Nome hotel:</strong> <a href="https://en.wikipedia.org/wiki/Buckingham_Palace">Buckingham Palace</a></li>
+                        <li><strong>Indirizzo hotel</strong> <a href="https://duckduckgo.com/?t=ffab&q=Westminster%2C+London+SW1A+1AA%2C+Regno+Unito&ia=web&iaxm=maps">Westminster, London SW1A 1AA, Regno Unito</a></li>
                     </ul>
                 </li>
                 <li> Aereo
@@ -107,8 +107,8 @@
     <footer>
         <h3>Le foto</h3>
         <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Immagine Tamigi">
-        <img src="https://www.studytoursinternational.com/images/cdl/schools/new/1483505065.jpg" alt="Immagine Big Ben">
-         <p>Made with &#128151 by Andrea</p>
+        <a href="https://en.wikipedia.org/wiki/Palace_of_Westminster"><img src="https://www.studytoursinternational.com/images/cdl/schools/new/1483505065.jpg" alt="Immagine Palace of Westminster"></a>
+         <p>Made with &#128151 by <a href="https://github.com/AndreaTorelli87">Andrea</a></p>
     </footer>
     <!-- fine ultima parte -->
 
